@@ -1,3 +1,8 @@
+29-Jul-2015 Geraldine Conti
+	* launch_jobs_on_grid.py: use zeroleptontruth.config for TRUTH1,
+	protection against DerivationTag to be set for TRUTH1
+	* FilterUpdateMerge.py : added DB sample in AllSamples
+
 28-Jul-2015 Laurent Duflot
 	* BuildSUSYObjects, ZeroLeptonCRx: propagate e/mu/photon SF
 
